# ModularMind-MM-RAGV1.1

./: .coveragerc  .env.example  Dockerfile  README.md  alembic.ini  config.yaml.example  docker-compose.yml  index.html  main.py  package.json  pyproject.toml  pytest.ini  requirements.txt  start.sh  tailwind.config.js  vite.config.ts
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  release.yml
ModularMind/: config.py  conftest.py
ModularMind/API/: main.py  metrics.py
ModularMind/scripts/: model_loader.py
ModularMind/tests/: test_embedding_service.py  test_fine_tuning_service.py  test_multimodal_service.py  test_retrieval_service.py
alembic/: env.py
alembic/versions/: 001_initial_migration.py
app/: main.py
app/agents/: answer_validator.py
app/api/: error_handler.py  rate_limit_middleware.py
app/core/: config.py  exceptions.py
app/models/: model_manager.py  multimodal_models.py
app/services/: feedback_analyzer.py  feedback_scorer.py  fine_tuning_scheduler.py  fine_tuning_service.py  language_detection.py  multilingual_retrieval.py  rag_service.py  storage_service.py  task_queue_worker.py  translation.py  vector_store.py
app/utils/: limiter.py  metrics.py  monitoring.py
backend/: pyproject.toml
backend/alembic/versions/: initial_schema.py
backend/app/: main.py
backend/app/agents/: __init__.py  answer_validator.py  api_reader.py  base.py  contextual_tagger.py  metadata_extractor.py  ocr_reader.py  orchestrator.py  query_expander.py  relation_builder.py  semantic_expander.py  summarization.py  web_scraper.py
backend/app/api/: deps.py
backend/app/api/errors/: handlers.py
backend/app/api/v1/: api.py  auth.py  documents.py  queries.py  ws.py
backend/app/api/v1/endpoints/: auth.py  metrics.py  rag.py  retrieval.py
backend/app/controllers/: agent_controller.py
backend/app/core/: settings.py  tasks.py
backend/app/db/models/: document.py
backend/app/middleware/: rate_limiter.py  security.py
backend/app/models/: agent.py  document.py
backend/app/services/: agent_service.py  attribution_enhancer.py  context_optimizer.py  dynamic_retriever.py  enrichment_service.py  llm_service.py  memory_service.py  query_service.py  retrieval_pipeline.py  translation_service.py  vector_store.py
backend/app/services/datasources/: sql_source.py
backend/app/services/metrics/: retrieval_metrics.py
backend/app/services/rerankers/: cross_encoder_reranker.py
backend/app/services/retrievers/: base.py  bm25_retriever.py  hybrid_retriever.py  metadata_retriever.py
backend/tests/: test_rag_pipeline.py
config/: config.json  embedding_models.json  llm_models.json  model_router.json  models.yaml  multimodal_models.yaml  retrieval.json  vector_store.json
deployment/docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  nginx.conf
deployment/helm/: values.yaml
docs/: api_reference.md  completion-report.md  deployment_guide.md  improvements.md  user-guide.md  user_guide.md  version-notes.md
docs/api/: README.md  retrieval-api-guide.md
e2e/tests/: auth.spec.ts
frontend/: .eslintrc.js  Dockerfile  jest.config.js  nginx.conf  package.json  tailwind.config.js  vite.config.ts  webpack.config.js
frontend/public/: manifest.json
frontend/src/: App.tsx  Routes.tsx  env.d.ts  i18n.ts  serviceWorker.ts  serviceWorkerRegistration.ts  setupTests.ts
monitoring/prometheus/: alert_rules.yml  (+1 more)
nginx/: default.conf
prometheus/: prometheus.yml
scripts/: download_models.py  run_coverage.py  setup_models.sh  validate_env.sh
src/: App.tsx  index.css  main.tsx  router.tsx
tests/: conftest.py  test_api_auth.py  test_api_health.py  test_feedback_analyzer.py  test_health.py  test_retrievers.py  test_vector_store.py
(+337 files in other folders)
