[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modularmind"
version = "1.0.0"
description = "ModularMind - Modern RAG Platform"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ModularMind Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.1",
    "aiofiles>=23.2.1",
    "numpy>=1.24.0",
    "pydantic>=2.4.2",
    "hnswlib>=0.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "openai>=1.3.3",
    "tiktoken>=0.5.1",
    "sentence-transformers>=2.2.2",
    "pypdf>=3.17.0",
    "docx2txt>=0.8",
    "beautifulsoup4>=4.12.2",
    "pandas>=2.1.1",
    "faiss-cpu>=1.7.4",
    "anthropic>=0.7.0",
    "cohere>=4.33",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.10.1",
    "isort>=5.12.0",
    "mypy>=1.6.1",
    "flake8>=6.1.0",
]

[tool.setuptools]
packages = ["ModularMind"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.mypy]
python_version = "3.9"
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"